2003-03-27  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/100576.xml, printer/100704.xml, printer/101152.xml,
	  printer/101952.xml, printer/102080.xml, printer/102304.xml,
	  printer/105504.xml, printer/106848.xml, printer/108128.xml,
	  printer/108320.xml, printer/108896.xml, printer/109440.xml,
	  printer/110464.xml, printer/110624.xml, printer/111392.xml,
	  printer/112832.xml, printer/112864.xml, printer/113312.xml,
	  printer/113888.xml, printer/114016.xml, printer/114592.xml,
	  printer/114656.xml, printer/114816.xml, printer/115488.xml,
	  printer/116128.xml, printer/116256.xml, printer/117472.xml,
	  printer/121952.xml, printer/122016.xml, printer/122048.xml,
	  printer/122080.xml, printer/122336.xml, printer/122496.xml,
	  printer/123584.xml, printer/123776.xml, printer/123968.xml,
	  printer/125024.xml, printer/125408.xml, printer/125632.xml,
	  printer/125696.xml, printer/126048.xml, printer/126049.xml,
	  printer/126080.xml, printer/126081.xml, printer/126082.xml,
	  printer/126083.xml, printer/126084.xml, printer/126085.xml,
	  printer/126086.xml, printer/126087.xml, printer/126112.xml,
	  printer/126113.xml, printer/126176.xml, printer/126177.xml,
	  printer/126178.xml, printer/126179.xml, printer/126180.xml,
	  printer/126181.xml, printer/126496.xml, printer/126752.xml,
	  printer/127776.xml, printer/128576.xml, printer/129184.xml,
	  printer/129376.xml, printer/129472.xml, printer/129632.xml,
	  printer/130080.xml, printer/130112.xml, printer/130208.xml,
	  printer/130272.xml, printer/130336.xml, printer/130656.xml,
	  printer/131424.xml, printer/132800.xml, printer/132832.xml,
	  printer/132864.xml, printer/133152.xml, printer/133664.xml,
	  printer/134880.xml, printer/135401.xml, printer/135529.xml,
	  printer/136928.xml, printer/138697.xml, printer/139017.xml,
	  printer/141417.xml, printer/142569.xml, printer/142825.xml,
	  printer/142944.xml, printer/143104.xml, printer/143689.xml,