@@ -1,0 +1,50 @@
+<printer id="printer/Epson-PM_970C">
+  <make>Epson</make>
+  <model>PM 970C</model>
+  <mechanism>
+    <inkjet/>
+    <color/>
+    <resolution>
+      <dpi>
+        <x>2880</x>
+        <y>2880</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>
+	7 separate ink tanks: Cyan, light cyan, magenta, light magenta,
+	yellow, dark yellow, black
+	</en>
+      </comments>
+    </consumables>
+  </mechanism>
+  <url></url>
+  <lang>
+    <escp/><!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>D</functionality>
+  <driver>gimp-print</driver>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+
+      Only available in Japan.&lt;p&gt;
+
+      7-ink (CcMmYyK) high-end photo printer with 1.8 pl minimum drop
+      size, 360 black nozzles, 180 nozzles per color, high-speed 4-ink
+      360-dpi mode. Maximum paper size is A4/Letter/Legal.&lt;p&gt;
+    
+      Preliminary support in GIMP-Print 4.3.12 and newer. Still
+      completely untuned, so do not expect high color
+      quality.&lt;p&gt;
+
+    </en>
+  </comments>
+</printer>
