@@ -1,3 +1,7 @@
+2003-03-30  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Epson-PM_970C.xml: Added Epson PM 970C printer.
+
 2003-03-27  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/100576.xml, printer/100704.xml, printer/101152.xml,
